<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey">

    <LinearLayout
        android:id="@+id/llCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/slide_3_title"
            android:textColor="@color/dot_inactive_screen3"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/newlogosignin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/slide_3_desc"
            android:textAlignment="center"
            android:textColor="@color/dot_inactive_screen3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dot_inactive_screen3"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            android:textColor="@color/TeenovatePurple"
            android:textSize="36sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hold_on"
            android:textColor="@color/dot_inactive_screen3" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/txtSetupProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Processing..."
            android:textColor="@color/dot_inactive_screen3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/setup_may_take_a_while"
            android:textColor="@color/dot_inactive_screen3" />
    </LinearLayout>

</RelativeLayout>
