<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="-120dp"
            android:src="@drawable/newlogosignin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="30dp"
            android:text="@string/slide_4_title_parent"
            android:textColor="@color/dot_inactive_screen3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/slide_4_desc_parent"
            android:textAlignment="center"
            android:textColor="@color/dot_inactive_screen3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/flamingo"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:backgroundTint="@color/dot_inactive_screen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="monospace"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/TeenovatePurple"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/happy_monitoring"
            android:textAlignment="center"
            android:textColor="@color/dot_inactive_screen3"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>