<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llInitialCOT"
    android:orientation="vertical"
    android:background="@color/white">


    <TextView
        android:id="@+id/flagged_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/TeenovatePurple"
        android:gravity="center_horizontal|top"
        android:paddingTop="10dp"
        android:text="Safe Conversations"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="28dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TeenovatePurple"
        android:gravity="center_horizontal|top"
        android:paddingHorizontal="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:text="@string/recommended"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="14dp" />

    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:paddingVertical="25dp"
        android:text="Tap to Trust/Untrust"
        android:textSize="28dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_inbox" />

        <TextView
            android:id="@+id/txtRecdLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/texts_received_by_child"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outbox" />

        <TextView
            android:id="@+id/txtSentLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/texts_sent_by_child"
            android:textColor="@android:color/black" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_msg_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnCotFinish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <Button
            android:id="@+id/btnCotFinish"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="3dp"
            android:background="@drawable/parentorchild_button"
            android:text="Finish"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>